--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 <div class="page" id="one">
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Question 1</h1>
+	<!-- added code to make yes or no buttons for question 1, response goes into function for allergy and cold --> 
 	</div>
-	
+	<a href="#two" onclick="allergyAdd();"class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#two" onclick="coldAdd();"class="w3-btn w3-grey w3-round"> No </a>
     	<div id="content" class="w3-container">
         <p>Put Question 1 content here.</p>    
     	</div>
