--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<a href="#two" onclick="allergyAdd();"class="w3-btn w3-grey w3-round"> Yes </a>
 	<a href="#two" onclick="coldAdd();"class="w3-btn w3-grey w3-round"> No </a>
     	<div id="content" class="w3-container">
-        <p>Put Question 1 content here.</p>    
+        <p>Are youre eyes watery or itchy?</p>    
+		 <!-- added question into content section --> 
     	</div>
 </div>
 
