--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<a href="#results" onclick="allergyAdd();"class="w3-btn w3-grey w3-round"> Yes </a>
 	<a href="#results" onclick="coldAdd();"class="w3-btn w3-grey w3-round"> No </a>
     	<div id="content" class="w3-container">
-        <p>Do you have a sore throat?</p>    
+        <p>Are your symptoms seasonal or chronic?</p>    
 		 <!-- changed question number and page ID; added question into content section and added corresponfing allergy/cold responses --> 
 		</div>
 </div>
