--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		 <!-- changed question number and page ID; added question into content section and added corresponfing allergy/cold responses --> 
 		</div>
 </div>
-	<div class="results" id="four">
+	<div class="page" id="results">
 	<div id="header" class="w3-container w3-flat-carrot">
-		<h1>Results
-		 <p id="results"></p> </h1>
+		
 		<!-- Trying to imput code to make results page -->
 		
     	</div>
