--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>
 	<div class="page" id="results">
 	<div id="header" class="w3-container w3-flat-carrot">
-		
+		</div>
+		<aresultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;</> 
+		<p id="results"></p>
 		<!-- Trying to imput code to make results page -->
 		
     	</div>
