--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		 <!-- changed question number and page ID; added question into content section and added corresponfing allergy/cold responses --> 
 		</div>
 </div>
+		</div>
+	<div class="page" id="results">
+	<div id="header" class="w3-container w3-flat-carrot">
+		<h1>Results</h1>
+	</div> <p id="results"><resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; /p>
+    	<div id="content" class="w3-container">
+        <p>Are your symptoms seasonal or chronic?</p>    
+		</div>
+</div>
 	<div class="page" id="results">
 	<div id="header" class="w3-container w3-flat-carrot">
 		</div>
