--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<h1>Question 1</h1>
 	<!-- added code to make yes or no buttons for question 1, response goes into function for allergy and cold --> 
 	</div>
+    	<div id="content" class="w3-container">
 	<a href="#two" onclick="allergyAdd();"class="w3-btn w3-grey w3-round"> Yes </a>
 	<a href="#two" onclick="coldAdd();"class="w3-btn w3-grey w3-round"> No </a>
-    	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p>    
 		 <!-- added question into content section --> 
     	</div>
@@ -143,7 +143,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<h1>Results</h1>
 	</div> <p id="results"><resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; /p>
     	<div id="content" class="w3-container">
-        <p>Are your symptoms seasonal or chronic?</p>    
+        <p>Results</p>    
 		</div>
 </div>
 	<div class="page" id="results">
