--- a/index.html
+++ b/index.html
@@ -108,10 +108,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div class="w3-container w3-flat-carrot">
 		<h1>Question 2</h1>
 	</div>
+	 <!-- moved question to appear above buttons --> 
+	<p>Do you have a fever?</p>
 	<a href="#three" onclick="coldAdd();"class="w3-btn w3-grey w3-round"> Yes </a>
 	<a href="#three" onclick="allergyAdd();"class="w3-btn w3-grey w3-round"> No </a>
 	<div id="content" class="w3-container">
-		<p>Do you have a fever?</p>
+		
 		<!-- Added content into page two content section and put corresponding cold and allergy syptoms -->
 	</div>
 </div>	
@@ -120,10 +122,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Question 3</h1>
 	</div>
+	 <!-- moved question to appear above buttons --> 
+	<p>Do you have a sore throat?</p>    
 	<a href="#four" onclick="coldAdd();"class="w3-btn w3-grey w3-round"> Yes </a>
 	<a href="#four" onclick="allergyAdd();"class="w3-btn w3-grey w3-round"> No </a>
     	<div id="content" class="w3-container">
-        <p>Do you have a sore throat?</p>    
+
 		 <!-- added question into content section and added corresponfing allergy/cold responses --> 
     	</div>
 </div>
@@ -131,10 +135,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Question 4</h1>
 	</div>
+        <!-- moved question to appear above buttons --> 
+	<p>Are your symptoms seasonal or chronic?</p> 
 	<a href="#results" onclick="allergyAdd();"class="w3-btn w3-grey w3-round"> Yes </a>
 	<a href="#results" onclick="coldAdd();"class="w3-btn w3-grey w3-round"> No </a>
     	<div id="content" class="w3-container">
-        <p>Are your symptoms seasonal or chronic?</p>    
+           
 		 <!-- changed question number and page ID; added question into content section and added corresponfing allergy/cold responses --> 
 		</div>
 </div>
