--- a/index.html
+++ b/index.html
@@ -148,6 +148,20 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div class="page" id="results">
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Results</h1>
+		  <script>
+        var allergy_count = 0;
+        var cold_count = 0; 
+
+
+        function allergyAdd(){
+            allergy_count = allergy_count + 1;
+        }
+
+        function coldAdd(){
+            cold_count = cold_count + 1;
+        }
+  </script>
+
 	</div> <p id="results"><resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; /p>
     	<div id="content" class="w3-container">
         <p>Results</p>    
