--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		</div>
 	<div class="page" id="results">
 	<div id="header" class="w3-container w3-flat-carrot">
-		<h1>Results</h1>
-		  <script>
+		<h1>	  <script>
         var allergy_count = 0;
         var cold_count = 0; 
 
@@ -160,7 +159,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         function coldAdd(){
             cold_count = cold_count + 1;
         }
-  </script>
+  </script></h1>
+	
 
 	</div> <p id="results"><resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; /p>
     	<div id="content" class="w3-container">
