--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
+The purpose of the code is to determine if syptoms are cold or allergy related by asking a series of questions
  
 Known Issues:
-blah, blah, blah, blah
+At teh begining, the code would only go up to page 2 and would not follow through with the series of questions to diagnose the syptoms.
 
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
