--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	</div> 
 	<div id="content" class="w3-container">	
-		<p id="results"<>/p>
+		<p id="results"></p>
     	</div>
 		
 <footer class="w3-bottom w3-container w3-flat-carrot">
