--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         }
 	
 	function getResults(){
-		var resultText = documenet.getElementById("results");
 		var allergyPercent = (allergy_count / 4) * 100;
 		var coldPercent = (cold_count / 4) * 100;
-		resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; 
-		
+		document.getElementById("results").innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold = " + coldPercent; 	
 	}
 
   </script>
@@ -163,6 +161,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">	
 		<p id="results"></p>
     	</div>
+		<button onclick="getResults()">Results</button>
+		
+	</div>
+
 		
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
