--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
 Authors in chronological order of contribution:
 Tim Riedel
-Author 2
+Maritza McNeal //update names of authors 
  
 Further Information:
 http://cns.utexas.edu/fri
@@ -36,12 +36,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 
 <script>
-        var allergy_count = 0; 
-        var cold_count = 0; 
+        var allergy_count = 0; //allergy count to begin at 0
+        var cold_count = 0; //cold count to begin at 0
 
         function allergyAdd(){
-            allergy_count = allergy_count + 1; 
-		alert(allergy_count);
+            allergy_count = allergy_count + 1; //if question relates to allergy, add 1
+		alert(allergy_count); //alerts that question relates to allergy 
 
         }
 
