--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		</div>
 	<div class="page" id="five">  <! page five displays the results of the previous questions answered by the user >
 	<div id="header" class="w3-container w3-flat-carrot">
-		<h1>results</h1>  <! this is the header displayed on page 5 >
+		<h1>Results</h1>  <! this is the header displayed on page 5 >
 
 	</div> 
 	<div id="content" class="w3-container">	
