--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	<div id="content" class="w3-container">
 	<p>Are your eyes watery or itchy?</p>   <! question 1 that is asked to user >
 	</div>
-	<a href="#two" onclick="allergyAdd();"class="w3-btn w3-grey w3-round"> Yes </a>  <! if user responds yes, one willm be added to allergy >
+	<a href="#two" onclick="allergyAdd();"class="w3-btn w3-grey w3-round"> Yes </a>  <! if user responds yes, one will be added to allergy >
 	<a href="#two" onclick="coldAdd();"class="w3-btn w3-grey w3-round"> No </a>  <! if user responds no, one will be added to code >
      
 		 <!-- added question into content section --> 
