word change in comment

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         }
 
         function coldAdd(){
-            cold_count = cold_count + 1; //if question relates to allergy, add 1
+            cold_count = cold_count + 1; //if question relates to cold, add 1
         }
 	
 	function getResults(){
